--- a/Test/app/src/main/res/layout/activity_main.xml
+++ b/Test/app/src/main/res/layout/activity_main.xml
@@ -102,4 +102,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.013" />
 
+    <ImageButton
+        android:id="@+id/imgbtnRd"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:src="@drawable/dice"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgbtn2"
+        app:layout_constraintVertical_bias="0.637"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".05" />
+
 </android.support.constraint.ConstraintLayout>
