--- a/Test/app/src/main/res/layout/activity_draw.xml
+++ b/Test/app/src/main/res/layout/activity_draw.xml
@@ -6,27 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.project3400.usyd.handwritingcapturing.DrawActivity">
 
-
-    <ImageButton
-        android:id="@+id/imgbtn_back"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@null"
-        android:scaleType="centerCrop"
-        android:src="@drawable/back_arrow"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.209"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.945" />
-
     <ImageView
-
 
         android:id="@+id/tracepad"
         android:layout_width="0dp"
@@ -46,6 +26,7 @@
         app:layout_constraintVertical_bias="0.497"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent=".6" />
+
 
     <ImageView
 
@@ -68,18 +49,25 @@
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent=".15" />
 
+
     <com.project3400.usyd.handwritingcapturing.DrawCanvas
         android:id="@+id/myCanvas"
-        android:layout_width="772dp"
-        android:layout_height="401dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.497"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".6" />
 
     <ImageButton
         android:id="@+id/imgbtn_reset"
@@ -94,10 +82,27 @@
         android:src="@drawable/reset"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.79"
+        app:layout_constraintHorizontal_bias="0.574"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.945" />
+        app:layout_constraintVertical_bias="0.985" />
 
+    <ImageButton
+        android:id="@+id/imgbtn_back"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:src="@drawable/back_arrow"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.426"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.985" />
 
 </android.support.constraint.ConstraintLayout>
