material design icon, fix icon size, save function added

--- a/Test/app/src/main/res/layout/activity_draw.xml
+++ b/Test/app/src/main/res/layout/activity_draw.xml
@@ -75,38 +75,71 @@
 
     <ImageButton
         android:id="@+id/imgbtn_reset"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@null"
-        android:scaleType="centerCrop"
-        android:src="@drawable/reset"
+        android:scaleType="fitCenter"
+        android:src="@drawable/reset_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.574"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".12"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imgbtn_save"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.985" />
+        app:layout_constraintVertical_bias="0.985"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".06"
+
+        />
 
     <ImageButton
         android:id="@+id/imgbtn_back"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@null"
-        android:scaleType="centerCrop"
-        android:src="@drawable/back_arrow"
+        android:scaleType="fitCenter"
+        android:src="@drawable/back_black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.426"
+        app:layout_constraintEnd_toStartOf="@+id/imgbtn_save"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".12"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.985" />
+        app:layout_constraintVertical_bias="0.985"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".06" />
+
+    <ImageButton
+        android:id="@+id/imgbtn_save"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        android:src="@drawable/save_black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent=".12"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.985"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent=".06"
+
+        />
 
 </android.support.constraint.ConstraintLayout>
