save function finished, icons in black or gray state available or unavailable

--- a/Test/app/src/main/res/layout/activity_draw.xml
+++ b/Test/app/src/main/res/layout/activity_draw.xml
@@ -83,7 +83,7 @@
         android:layout_marginTop="8dp"
         android:background="@null"
         android:scaleType="fitCenter"
-        android:src="@drawable/reset_black"
+        android:src="@drawable/reset_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
@@ -129,7 +129,7 @@
         android:layout_marginTop="8dp"
         android:background="@null"
         android:scaleType="fitCenter"
-        android:src="@drawable/save_black"
+        android:src="@drawable/save_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
