--- a/Test/app/src/main/res/layout/dialog.xml
+++ b/Test/app/src/main/res/layout/dialog.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<android.support.constraint.ConstraintLayout-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+<!--</android.support.constraint.ConstraintLayout>-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="400dp"
@@ -48,8 +54,8 @@
                 android:id="@+id/radio_male"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Male"
-                android:onClick="RadioButtonClicked"/>
+                android:onClick="RadioButtonClicked"
+                android:text="Male" />
 
             <RadioButton
                 android:id="@+id/radio_female"
