new changes adapt to simon's request

--- a/Test/app/src/main/res/layout/dialog_info.xml
+++ b/Test/app/src/main/res/layout/dialog_info.xml
@@ -1,9 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<android.support.constraint.ConstraintLayout-->
-    <!--xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent">-->
-
-<!--</android.support.constraint.ConstraintLayout>-->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
@@ -17,7 +12,7 @@
         android:background="#FFFFFFFF"
         android:contentDescription="@string/app_name" />
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/Username"
         android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,7 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_below="@id/username">
+        android:layout_below="@id/Username">
 
         <EditText
             android:id="@+id/Age"
@@ -54,6 +49,7 @@
                 android:id="@+id/radio_male"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:onClick="RadioButtonClicked"
                 android:text="Male" />
 
